--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h6 {
 
 #header.header-scrolled,
 #header.header-pages {
-  height: 70px;
+  height: 100px;
   padding: 15px 0;
   background-color: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
@@ -199,7 +199,8 @@ h6 {
 #header .logo img {
   padding: 0;
   margin: 7px 0;
-  max-height: 26px;
+  height: auto;
+  max-height: 85px;
 }
 
 .main-pages {
@@ -424,6 +425,7 @@ h6 {
   position: fixed;
   right: 0;
   top: 0;
+  margin-right: 30px;
   z-index: 9998;
   border: 0;
   background: none;
@@ -1230,7 +1232,7 @@ h6 {
 }
 
 #footer .footer-top .footer-info h3 {
-  font-size: 34px;
+  font-size: 25px;
   margin: 0 0 20px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
