--- a/css/style.css
+++ b/css/style.css
@@ -1542,7 +1542,30 @@ form .icon {
   background-size: 100% 100%;
   transform: translateY(-0.15em);
 }
+#talk img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#talk{
+  width: 100%;
+  max-width: 200px; /* Adjust as needed */
+  height: 50px; /* Adjust as needed */
+  margin: auto;
+}
 
+#loader img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+ #loader {
+    width: 100%;
+    max-width: 200px; /* Adjust as needed */
+    height: 50px; /* Adjust as needed */
+    margin: auto;
+}
 
 /*--------------------------------------------------------------
 # Responsive Media Queries
