--- a/css/style.css
+++ b/css/style.css
@@ -363,22 +363,14 @@ a.linkedin:hover {
 
 
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-# Navbar Menu
---------------------------------------------------------------*/
-
 
 /* Desktop Navigation */
 
-.main-nav {
-  /* Drop Down */
-  /* Deep Drop Down */
-  
-}
+/* Drop Down */
+/* Deep Drop Down */
+/* .main-nav {
+ 
+} */
 
 .main-nav,
 .main-nav * {
